<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deepBlue"
    >
    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/group_73">

    </ImageView>

    <TextView
        android:id="@+id/crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/sf_pro_bold"
        android:layout_margin="20dp"
        android:text="@string/crear_cuenta_register_title"
        android:textColor="@color/white"
        android:textSize="30sp"
       />

    <EditText
        android:id="@+id/nombre_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/crear_cuenta"
        android:fontFamily="@font/sf_pro_bold"
        android:hint="@string/nombre_de_usuario_register_hint"
        android:textColorHint="@color/grayWhite"
        android:layout_margin="20dp"
        />


    <EditText
        android:id="@+id/contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nombre_usuario"
        android:hint="@string/password_register_title"
        android:fontFamily="@font/sf_pro_bold"
        android:textColorHint="@color/grayWhite"
        android:layout_margin="20dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/contraseña"
        android:hint="@string/email_register_title"
        android:fontFamily="@font/sf_pro_bold"
        android:textColorHint="@color/grayWhite"
        android:layout_margin="20dp"
        />

    <EditText
        android:id="@+id/Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:hint="@string/nombre_register_text"
        android:fontFamily="@font/sf_pro_bold"
        android:textColorHint="@color/grayWhite"
        android:layout_margin="20dp"
      />

    <EditText
        android:id="@+id/celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Nombre"
        android:hint="@string/celular_register_text"
        android:fontFamily="@font/sf_pro_bold"
        android:textColorHint="@color/grayWhite"
        android:layout_margin="20dp"
       />

    <EditText
        android:id="@+id/pais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/celular"
        android:hint="@string/pais_register_text"
        android:fontFamily="@font/sf_pro_bold"
        android:textColorHint="@color/grayWhite"
        android:layout_margin="20dp"
      />


    <Button
        android:id="@+id/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pais"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/crear_register_text"
        android:fontFamily="@font/sf_pro_bold"
        android:textSize="30sp"
        android:textColor="@color/grayBlue"
        android:backgroundTint="@color/grayWhite"
     />
</androidx.constraintlayout.widget.ConstraintLayout>