<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/perfil_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deepBlue"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/superior_bar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/grayBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/flecha"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/superior_bar"
            android:src="@drawable/left_arrow_svgrepo_com_1__1_"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/flecha"
            app:layout_constraintBottom_toBottomOf="@id/superior_bar"
            android:text="@string/profile_edit_title"
            android:textSize="25sp"
            android:textColor="@color/grayWhite"
            android:fontFamily="@font/sf_pro_bold"
            android:layout_margin="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fondo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/superior_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/azul_oscuro">

        <ImageView
            android:id="@+id/perfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            android:src="@drawable/generic_avatar" />

        <EditText
            android:id="@+id/id_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/fondo"
            app:layout_constraintStart_toEndOf="@id/perfil"
            android:text="@string/profile_user_id"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp" />

        <TextView
            android:id="@+id/gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/id_usuario"
            app:layout_constraintStart_toStartOf="@id/id_usuario"
            android:text="@string/profile_email_example"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_bold" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fondo"
        android:text="@string/profile_name_label"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_bold" />

    <EditText
        android:id="@+id/Nombre1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Nombre"
        android:hint="@string/profile_name_hint"
        android:textColorHint="@color/gray"

        android:fontFamily="@font/sf_pro_bold"
        android:inputType="textPersonName|textCapWords"
        android:textColor="@color/grayBlue"
        android:background="@android:color/darker_gray"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Nombre1"
        android:text="@string/profile_email_label"

        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_bold"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/Email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Email"
        android:hint="@string/profile_email_hint"
        android:textColorHint="@color/gray"
        android:textColor="@color/grayBlue"
        android:fontFamily="@font/sf_pro_bold"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Email1"
        android:text="@string/profile_password_label"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_bold"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/Password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Password"
        android:hint="@string/profile_password_hint"
        android:textColorHint="@color/gray"
        android:textColor="@color/grayBlue"
        android:fontFamily="@font/sf_pro_bold"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/Celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Password1"
        android:text="@string/profile_phone_label"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_bold"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/Celular1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Celular"
        android:hint="@string/profile_phone_hint"
        android:fontFamily="@font/sf_pro_bold"
        android:textColorHint="@color/gray"
        android:textColor="@color/grayBlue"
        android:inputType="number"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/Pais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Celular1"
        android:text="@string/profile_country_label"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_bold"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/Pais1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Pais"
        android:hint="@string/profile_country_hint"
        android:textColorHint="@color/gray"
        android:textColor="@color/grayBlue"
        android:fontFamily="@font/sf_pro_bold"
        android:inputType="textCapWords"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="40dp"
        android:text="@string/profile_save_button"
        android:textSize="20sp"
        android:textColor="@color/grayBlue"
        android:backgroundTint="@android:color/darker_gray" />
</androidx.constraintlayout.widget.ConstraintLayout>