<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_login"
    android:background="@color/deepBlue">

    <TextView
        android:id="@+id/sign_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_title_text"
        android:textColor="@color/grayWhite"
        android:fontFamily="@font/sf_pro_bold"
        android:textSize="37sp"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.20"/>

    <ImageView
        android:id="@+id/sign_logo"
        android:layout_width="76dp"
        android:layout_height="51dp"
        android:src="@drawable/cloud_vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/sign_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/sign_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/sign_message_text"
        android:textColor="@color/grayWhite"
        android:fontFamily="@font/nunito_bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hint_email"
        android:fontFamily="@font/nunito_bold"
        android:textColorHint="@color/grayWhite"
        android:textColor="@color/grayWhite"
        android:backgroundTint="@color/grayWhite"
        android:layout_marginTop="180dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hint_password"
        android:fontFamily="@font/nunito_bold"
        android:textColorHint="@color/grayWhite"
        android:textColor="@color/grayWhite"
        android:backgroundTint="@color/grayWhite"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/button_login"
        android:textSize="25sp"
        android:fontFamily="@font/sf_pro_bold"
        android:textColor="@color/deepBlue"
        android:backgroundTint="@color/grayWhite"/>

    <TextView
        android:id="@+id/register_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="70dp"
        android:text="@string/register_message_text"
        android:textColor="@color/grayWhite"
        android:fontFamily="@font/nunito_bold"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/register_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toEndOf="@id/register_message"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/register_button_text"
        android:textColor="@color/skyBlue"
        android:fontFamily="@font/nunito_bold"
        android:textSize="17sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>