<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/game_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/gradient"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gradient_overlay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/game_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/game_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sf_pro_bold"
            app:layout_constraintTop_toTopOf="@id/gradient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/game_tags"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/game_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/tagsgamecard"
            android:textColor="@android:color/white"
            android:layout_marginTop="2dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/game_name"
            app:layout_constraintStart_toStartOf="@id/game_name"
            app:layout_constraintEnd_toEndOf="@id/game_name"/>

        <TextView
            android:id="@+id/game_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/price"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="@id/gradient"
            app:layout_constraintEnd_toEndOf="@id/gradient"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>